PROD-1139 - Videos directory navigation css fix + spacing

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_video.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_video.scss
@@ -1459,6 +1459,18 @@ div.dropzone.dz-started {
 
 }
 
+.video-type-navs.main-navs {
+	border-bottom: 1px solid #e7e9ec;
+}
+
+#video-stream {
+	margin-top: 20px;
+
+	.video-list.bp-list {
+		margin-top: 0;
+	}
+}
+
 //Video Uploader
 #activity-post-video-uploader,
 #bp-video-dropzone-content,
